# vectorlens

./: .gitignore  BLOG_POST.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ISSUES.md  NEWSLETTER_PITCHES.md  OUTREACH_DRAFTS.md  PROMOTION.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  context.md  devnotes.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  reddit-post.yml  tests.yml  twitter-post.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: ChunkCard.tsx  (+4 more)
examples/: README.md  anthropic_faiss.py  langchain_rag.py  openai_chromadb.py
tests/: test_attention_attribution.py  test_attribution.py  test_detection.py  test_graphrag_attribution.py  test_integration.py  test_interceptors.py  test_pipeline.py  test_pytest_plugin.py  test_server.py  test_testing.py  test_types.py
vectorlens/: __init__.py  cag.py  cli.py  pipeline.py  pytest_plugin.py  session_bus.py  share.py  testing.py  types.py
vectorlens/attribution/: __init__.py  attention.py  graphrag_attribution.py  perturbation.py
vectorlens/detection/: __init__.py  hallucination.py
vectorlens/interceptors/: __init__.py  anthropic_patch.py  base.py  chroma_patch.py  faiss_patch.py  gemini_patch.py  graphrag_patch.py  httpx_transport.py  langchain_patch.py  openai_patch.py  pgvector_patch.py  pinecone_patch.py  transformers_patch.py  weaviate_patch.py
vectorlens/server/: __init__.py  api.py  app.py
(+3 files in other folders)
