[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorlens"
version = "0.1.0"
description = "See why your RAG hallucinates — in 30 seconds, no config."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
transformers = ["torch>=2.0.0", "transformers>=4.40.0"]
chromadb = ["chromadb>=0.5.0"]
pinecone = ["pinecone-client>=3.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "chromadb>=0.5.0",
]

[project.scripts]
vectorlens = "vectorlens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vectorlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (slow, loads ML models)",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
